--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,10 @@
   "description": "MyFoodList-website",
   "scripts": {
     "dev": "parcel src/index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint  --fix . --ext .ts",
+    "prettier-format": "prettier --config .prettierrc src/**/*.ts --write"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +24,11 @@
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "parcel-bundler": "^1.12.5",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.2.1"
   }
 }
