--- a/backend/package.json
+++ b/backend/package.json
@@ -6,17 +6,32 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "sequelize": "^6.6.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
-  "devDependencies": {
-    "@types/express": "^4.17.11"
-  },
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "build:docker": "docker build -t myfoodlist-backend .",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint  --fix . --ext .ts",
+    "docker:run": "docker run -p 3000:3000 myfoodlist-backend",
+    "prettier-format": "prettier --config .prettierrc src/**/*.ts --write"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines" : {
+    "node" : ">=0.14"
+  }
 }
