--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "pg": "^8.6.0",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./dist/src/index.js",
     "build": "tsc",
     "build:docker": "docker build -t myfoodlist-backend .",
     "lint": "eslint . --ext .ts",
@@ -31,7 +33,7 @@
   },
   "author": "",
   "license": "ISC",
-  "engines" : {
-    "node" : ">=0.14"
+  "engines": {
+    "node": ">=0.14"
   }
 }
