--- a/app-mobile/package.json
+++ b/app-mobile/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "awesometsproject",
+  "name": "my-food-list-mobile",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "upgrade": "react-native upgrade",
+    "link": "react-native link",
+    "eject": "react-native eject",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
@@ -11,7 +14,7 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "0.64.0"
+    "react-native": "0.64.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -25,7 +28,8 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "react-native-eject": "^0.1.2"
   },
   "resolutions": {
     "@types/react": "^17"
