--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pg": "^8.6.0",
+    "puppeteer": "^9.1.1",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
