--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/puppeteer": "^5.4.3",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
@@ -30,7 +31,7 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint  --fix . --ext .ts",
     "docker:run": "docker run -p 3000:3000 myfoodlist-backend",
-    "prettier-format": "prettier --config .prettierrc src/**/*.ts --write"
+    "prettier:write": "prettier --config .prettierrc src/**/*.ts --write"
   },
   "author": "",
   "license": "ISC",
