--- a/app/package.json
+++ b/app/package.json
@@ -13,12 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@reduxjs/toolkit": "^1.5.1",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.4",
